--- a/Assets/EventData/summer-game-jam-2023_json-converter/style.css
+++ b/Assets/EventData/summer-game-jam-2023_json-converter/style.css
@@ -2,6 +2,13 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 20px;
+    background-color: black;
+    color: white;
+  }
+
+  input[type="text"], input[type="number"], textarea {
+    background-color: black;
+    color: white;
   }
   
   h1 {
